parser funktioniert wieder normal und alles... xD