@@ -1,14 +1,13 @@
 package at.hacksolutions.f2p.pdfbox;
 
 import java.io.IOException;
-import java.util.ArrayList;
 import java.util.LinkedList;
 
 public class RichString {
 
-    private ArrayList<RichFormat> formattings;
+    private LinkedList<RichFormat> formattings;
 
-    public ArrayList<RichFormat> getFormattings() {
+    public LinkedList<RichFormat> getFormattings() {
 	return formattings;
     }
 
@@ -16,12 +15,12 @@ public class RichString {
 	this(rawText, null);
     }
 
-    private RichString(ArrayList<RichFormat> formattings) {
+    private RichString(LinkedList<RichFormat> formattings) {
 	this.formattings = formattings;
     }
 
     public RichString(String rawText, RichFormat singleFormatting) {
-	formattings = new ArrayList<RichFormat>();
+	formattings = new LinkedList<RichFormat>();
 
 	if (singleFormatting == null) {
 	    RichFormatParser rfp = new RichFormatParser(rawText);
@@ -34,11 +33,11 @@ public class RichString {
     }
 
     public RichString substring(int beginIndex, int endIndex) {
-	ArrayList<RichFormat> formattings = new ArrayList<RichFormat>();
+	LinkedList<RichFormat> formattings = new LinkedList<RichFormat>();
 
 	int i = 0;
 
-	RichFormat currentFormat = this.formattings.get(0);
+	RichFormat currentFormat = this.formattings.getFirst();
 	String currentString = currentFormat.getText();
 	String newString = "";
 	while (i < endIndex) {
@@ -62,7 +61,7 @@ public class RichString {
 		formattings.add(currentFormat.cloneWithNewText(newString));
 	    }
 	    i = i + currentString.length();
-	    if (currentFormat != this.formattings.get(formattings.size()-1)) {
+	    if (currentFormat != this.formattings.getLast()) {
 		currentFormat = this.formattings
 			.get(this.formattings.indexOf(currentFormat) + 1);
 		currentString = currentFormat.getText();
@@ -91,10 +90,10 @@ public class RichString {
 	}
     }
 
-    public float stringWidth(AbstractPager pager) throws IOException {
+    public float stringWidth(Pager page) throws IOException {
 	float width = 0.0f;
 	for (RichFormat text : formattings) {
-	    width = width + text.stringWidth(pager);
+	    width = width + text.stringWidth(page);
 	}
 	return width;
     }
